recursion.logo.square.FourSquare.scala.error
Erreur de compilation :
FourSquare:10: error: Unmatched closing brace '}' ignored here
}
^